--- a/src/main/resources/sdu/software/climatewars/Domain/game.fxml
+++ b/src/main/resources/sdu/software/climatewars/Domain/game.fxml
@@ -76,9 +76,9 @@
          </font>
       </Label>
       <Pane fx:id="southDoor" layoutX="498.0" layoutY="575.0" prefHeight="26.0" prefWidth="76.0" style="-fx-background-color: white;" />
-      <ImageView fx:id="player" fitHeight="124.0" fitWidth="45.0" layoutX="512.0" layoutY="252.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="player" fitHeight="186.0" fitWidth="322" layoutX="375.0" layoutY="252.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@/Anton.png" />
+            <Image url="@../../../../Anton/Anton6.png" />
          </image>
       </ImageView>
       <Label fx:id="southText" layoutX="512.0" layoutY="577.0" prefHeight="21.0" prefWidth="59.0" text="Go South">
