--- a/src/main/resources/sdu/software/climatewars/Domain/game.fxml
+++ b/src/main/resources/sdu/software/climatewars/Domain/game.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -8,6 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleOnKeyPressed" onKeyReleased="#handleOnKeyReleased" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sdu.software.climatewars.GUI.GameController">
@@ -152,5 +154,37 @@
             <Image url="@../../../../group.png" />
          </image>
       </ImageView>
+      <BorderPane layoutX="-7.0" layoutY="-5.0" prefHeight="610.0" prefWidth="1010.0" style="-fx-background-color: BLACK;">
+         <top>
+            <Label alignment="CENTER" contentDisplay="CENTER" text="Climate Wars" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="48.0" />
+               </font>
+               <BorderPane.margin>
+                  <Insets top="25.0" />
+               </BorderPane.margin>
+            </Label>
+         </top>
+         <center>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="startButton" mnemonicParsing="false" text="Start">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="optionsButton" mnemonicParsing="false" text="Options">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="quitButton" mnemonicParsing="false" text="Quit" />
+               </children>
+               <BorderPane.margin>
+                  <Insets bottom="10.0" top="25.0" />
+               </BorderPane.margin>
+            </VBox>
+         </center>
+      </BorderPane>
    </children>
 </AnchorPane>
