--- a/src/main/resources/sdu/software/climatewars/Domain/game.fxml
+++ b/src/main/resources/sdu/software/climatewars/Domain/game.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleOnKeyPressed" onKeyReleased="#handleOnKeyReleased" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sdu.software.climatewars.GUI.GameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#handleOnKeyPressed" onKeyReleased="#handleOnKeyReleased" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sdu.software.climatewars.GUI.GameController">
    <children>
       <ImageView fx:id="backgroundImage" fitHeight="600.0" fitWidth="1009.0" layoutX="-7.0" pickOnBounds="true">
          <image>
@@ -154,7 +148,8 @@
             <Image url="@../../../../group.png" />
          </image>
       </ImageView>
-      <BorderPane layoutX="-7.0" layoutY="-5.0" prefHeight="610.0" prefWidth="1010.0" style="-fx-background-color: BLACK;">
+      <Button fx:id="menuButton" layoutY="574.0" mnemonicParsing="false" onAction="#openMenu" text="Menu" />
+      <BorderPane fx:id="menu" layoutX="-7.0" layoutY="-5.0" prefHeight="610.0" prefWidth="1010.0" style="-fx-background-color: BLACK;">
          <top>
             <Label alignment="CENTER" contentDisplay="CENTER" text="Climate Wars" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
                <font>
@@ -168,7 +163,7 @@
          <center>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="startButton" mnemonicParsing="false" text="Start">
+                  <Button fx:id="startButton" mnemonicParsing="false" onAction="#startAction" text="Start">
                      <VBox.margin>
                         <Insets bottom="10.0" />
                      </VBox.margin>
@@ -178,7 +173,7 @@
                         <Insets bottom="10.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="quitButton" mnemonicParsing="false" text="Quit" />
+                  <Button fx:id="quitButton" mnemonicParsing="false" onAction="#quitAction" text="Quit" />
                </children>
                <BorderPane.margin>
                   <Insets bottom="10.0" top="25.0" />
