--- a/src/main/resources/sdu/software/climatewars/Domain/game.fxml
+++ b/src/main/resources/sdu/software/climatewars/Domain/game.fxml
@@ -97,7 +97,7 @@
             <Font size="12.0" />
          </font>
       </Label>
-      <AnchorPane fx:id="textBox1" layoutX="704.0" layoutY="441.0" prefHeight="161.0" prefWidth="299.0" style="-fx-background-color: white; -fx-border-color: black;">
+      <AnchorPane fx:id="textBox1" layoutX="704.0" layoutY="441.0" prefHeight="161.0" prefWidth="299.0" style="-fx-background-color: white; -fx-border-color: black;" visible="false">
          <children>
             <Label fx:id="title1" layoutX="9.0" layoutY="-9.0" prefHeight="58.0" prefWidth="280.0" text="INFO:">
                <font>
@@ -109,7 +109,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Button fx:id="button1" layoutX="219.0" layoutY="104.0" mnemonicParsing="false" onAction="#button1Action" prefHeight="33.0" prefWidth="68.0" style="-fx-wrap-text: true;" text="Execute">
+            <Button fx:id="button1" layoutX="219.0" layoutY="104.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="68.0" style="-fx-wrap-text: true;" text="Execute">
                <font>
                   <Font size="10.0" />
                </font>
